Erdős Virág added

--- a/public/index.html
+++ b/public/index.html
@@ -1,39 +1,54 @@
 <!DOCTYPE html>
 <html lang="hu">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
-    <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="page.css">
-    <link rel="stylesheet" href="nav.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Magyar kortárs versek</title>
+  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="page.css">
+  <link rel="stylesheet" href="nav.css">
 </head>
-    <body>
-    <table id="MainMenuTitleOuter">
-        <tbody>
+<body>
+<table id="MainMenuTitleOuter">
+  <tbody>
+    <tr>
+      <td>
+        <table id="MainMenuTitleInner">
+          <tbody>
             <tr>
-                <td>
-                    <table id="MainMenuTitleInner">
-                        <tbody>
-                        <tr>
-                            <td>Magyar kortárs versek</td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </td>
+              <td>Magyar kortárs versek</td>
             </tr>
-        </tbody>
-    </table>
-        <table id="MainMenu">
-            <tbody>
-                <tr>
-                    <td class="mainMenuOdd mainMenuItem">Erdős Virág<br><br><div class="overflow"><img src="img/erdos-virag.jpg"></div></td>
-                    <td class="mainMenuEven mainMenuItem"><div class="overflow"><img src="img/karafiath_orsolya.jpg"></div><br>Karafiáth Orsolya</td>
-                    <td class="mainMenuOdd mainMenuItem">Kemény Lili<br><br><div class="overflow"><img src="img/kemeny_lili.jpg"></div></td>
-                    <td class="mainMenuEven mainMenuItem"><div class="overflow"><img src="img/szaloczi_daniel.jpg"></div><br>Szalóczi Dániel</td>
-                    <td class="mainMenuOdd mainMenuItem">Zavada Péter<br><br><div class="overflow"><img src="img/zavada_peter_200518_01-9.jpg"></div></td>
-                </tr>
-            </tbody>
+          </tbody>
         </table>
-    </body>
+      </td>
+    </tr>
+  </tbody>
+</table>
+<table id="MainMenu">
+  <tbody>
+    <tr>
+      <td class="mainMenuOdd mainMenuItem">Erdős Virág<br><br>
+        <div class="overflow"><a href="erdos.html"><img src="img/erdos-virag.jpg"></a></div>
+      </td>
+      <td class="mainMenuEven mainMenuItem">
+        <div class="overflow"><a href="karafiath.html"><img src="img/karafiath_orsolya.jpg"></a></div>
+        <br>Karafiáth Orsolya
+      </td>
+      <td class="mainMenuOdd mainMenuItem">Kemény Lili<br><br>
+        <div class="overflow"><a href="kemeny.html"><img src="img/kemeny_lili.jpg"></a></div>
+      </td>
+      <td class="mainMenuEven mainMenuItem">
+        <div class="overflow"><a href="szaloczi.html"><img src="img/szaloczi_daniel.jpg"></a></div>
+        <br>Szalóczi Dániel
+      </td>
+      <td class="mainMenuOdd mainMenuItem">Zavada Péter<br><br>
+        <div class="overflow"><a href="zavada.html"><img src="img/zavada_peter_200518_01-9.jpg"></a></div>
+      </td>
+      <td class="mainMenuEven mainMenuItem"><br><br>
+        <div class="overflow"><img src="img/.jpg"></div>
+      </td>
+    </tr>
+  </tbody>
+</table>
+</body>
 </html>
