Kemény Zsófi added to Kezdőlap

--- a/public/index.html
+++ b/public/index.html
@@ -44,8 +44,9 @@
       <td class="mainMenuOdd mainMenuItem">Zavada Péter<br><br>
         <div class="overflow"><a href="zavada.html"><img src="img/zavada_peter_200518_01-9.jpg"></a></div>
       </td>
-      <td class="mainMenuEven mainMenuItem"><br><br>
-        <div class="overflow"><img src="img/.jpg"></div>
+      <td class="mainMenuEven mainMenuItem">
+        <div class="overflow"><a href="kemeny.html"><img src="img/kemeny_zsofi.jpg"></a></div>
+        <br>Kemény Zsófi
       </td>
     </tr>
   </tbody>
