More headers added

--- a/public/erdos.html
+++ b/public/erdos.html
@@ -25,9 +25,11 @@
                       <td class="navMenu">
                         <img src="img/erdos-virag.jpg"><br><h1>Erdős Virág</h1>
                         <ul class="navBar">
-                          <a href="index.html"><li class="navItem navUp" id="KezdolapButton">Kezdőlap</li></a>
-                          <a href="#Negyes-Hatos"><li class="navItem navCenter" id="Negyes-HatosButton">Négyes-Hatos</li></a>
-                          <a href="#NaMostAkkor"><li class="navItem navDown" id="NaMostAkkorButton">Na most akkor</li></a>
+                          <a href="index.html"><li class="navItem navUp header1" id="KezdolapButton">Kezdőlap</li></a>
+                          <a href="#Eletrajz"><li class="navItem navCenter header1" id="EletrajzButton">Életrajz</li></a>
+                          <a href="#Versek"><li class="navItem navCenter header1" id="VersekButton">Versek</li></a>
+                          <a href="#Negyes-Hatos"><li class="navItem navCenter header2" id="Negyes-HatosButton">  — Négyes-Hatos</li></a>
+                          <a href="#NaMostAkkor"><li class="navItem navDown header2" id="NaMostAkkorButton">  — Na most akkor</li></a>
                         </ul>
                       </td>
                     </tr>
@@ -39,6 +41,7 @@
         </table>
       </td>
       <td class="page" id="PageSide">
+        <div class="mainHeader"><a name="Eletrajz"><h1>Életrajz</h1></a></div>
         <div class="bio">1968-ban született. Az ELTE Bölcsészettudományi Karának magyar szakán szerzett
         diplomát. Írói pályája Lengyel Péter „Írói műhely” című legendás egyetemi szemináriumán
         indult.
@@ -56,7 +59,8 @@
         ország vagy az Én vétkem
         </div><br>
         <div class="poem">
-          <a name="Negyes-Hatos"><h1>Négyes-hatos</h1></a>
+          <div class="mainHeader"><a name="Versek"><h1>Versek</h1></div>
+          <a name="Negyes-Hatos"><h2>Négyes-hatos</h2></a>
           Akármilyen büdös-sáros,<br>
           mégiscsak jó hely a város!<br>
           Nem kell ide-oda futni,<br>
@@ -126,7 +130,7 @@
           Hogyha kérdi bárki, nos:<br>
           nincs jobb, mint a villamos!<br>
 
-          <a name="NaMostAkkor"><h1>Na most akkor</h1></a>
+          <a name="NaMostAkkor"><h2>Na most akkor</h2></a>
           na most akkor mondjátok meg nagyokosok mi legyen<br>
           ki ne legyen miközülünk maholnap és ki legyen<br>
           ki legeljen penne ágyon rozmaringos mellfilét<br>
