Kemény Lili added and unnoticeable bug fixes

--- a/public/erdos.html
+++ b/public/erdos.html
@@ -59,7 +59,7 @@
         ország vagy az Én vétkem
         </div><br>
         <div class="poem">
-          <div class="mainHeader"><a name="Versek"><h1>Versek</h1></div>
+          <div class="mainHeader"><a name="Versek"><h1>Versek</h1></a></div>
           <a name="Negyes-Hatos"><h2>Négyes-hatos</h2></a>
           Akármilyen büdös-sáros,<br>
           mégiscsak jó hely a város!<br>
