--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
         <br>Karafiáth Orsolya
       </td>
       <td class="mainMenuOdd mainMenuItem">Kemény Lili<br><br>
-        <div class="overflow"><a href="kemeny.html"><img src="img/kemeny_lili.jpg"></a></div>
+        <div class="overflow"><a href="kemeny_l.html"><img src="img/kemeny_lili.jpg"></a></div>
       </td>
       <td class="mainMenuEven mainMenuItem">
         <div class="overflow"><a href="szaloczi.html"><img src="img/szaloczi_daniel.jpg"></a></div>
@@ -45,7 +45,7 @@
         <div class="overflow"><a href="zavada.html"><img src="img/zavada_peter_200518_01-9.jpg"></a></div>
       </td>
       <td class="mainMenuEven mainMenuItem">
-        <div class="overflow"><a href="kemeny.html"><img src="img/kemeny_zsofi.jpg"></a></div>
+        <div class="overflow"><a href="kemeny_zs.html"><img src="img/kemeny_zsofi.jpg"></a></div>
         <br>Kemény Zsófi
       </td>
     </tr>
