--- a/public/karafiath.html
+++ b/public/karafiath.html
@@ -29,7 +29,7 @@
                     <a href="#Eletrajz"><li class="navItem navCenter header1" id="EletrajzButton">Életrajz</li></a>
                     <a href="#Versek"><li class="navItem navCenter header1" id="VersekButton">Versek</li></a>
                     <a href="#Lidercfeny"><li class="navItem navCenter header2" id="LidercfenyButton">  — Lidércfény</li></a>
-                    <a href="#Tango"><li class="navItem navDown header2" id="TangoButton">  — Tango</li></a>
+                    <a href="#Tango"><li class="navItem navCenter header2" id="TangoButton">  — Tango</li></a>
                     <a href="#Pokok"><li class="navItem navDown header2" id="PokokButton">  — Pókok</li></a>
                   </ul>
                 </td>
@@ -48,7 +48,7 @@
         Emellett tévézett, írt és ír publicisztikát és rendszeresen vezet tárlatot is. Könyvbemutatói valódi irodalmi performanszok. De ez csak a háborgó felszín. Mindenekelõtt költõ, író, dalszövegíró, aki nyolc önálló kötettel jelentkezett eddig, és a Kicsi Lili, illetve a Szirén folytatásaként már beígérte függõség-trilógiája harmadik tételét is.
       </div><br>
       <div class="poem">
-        <div class="mainHeader"><a name="Versek"><h1>Versek</h1></div>
+        <div class="mainHeader"><a name="Versek"><h1>Versek</h1></a></div>
         <a name="Lidercfeny"><h2>Lidércfény</h2></a>
         A Hold-allé mellett ma éjszaka<br>
         egyszerre teljesen magam maradtam.<br>
