Szalóczi Dániel, Zavada Péter and Kemény Zsófi added andnow it's a working product

--- a/public/erdos.html
+++ b/public/erdos.html
@@ -28,8 +28,8 @@
                           <a href="index.html"><li class="navItem navUp header1" id="KezdolapButton">Kezdőlap</li></a>
                           <a href="#Eletrajz"><li class="navItem navCenter header1" id="EletrajzButton">Életrajz</li></a>
                           <a href="#Versek"><li class="navItem navCenter header1" id="VersekButton">Versek</li></a>
-                          <a href="#Negyes-Hatos"><li class="navItem navCenter header2" id="Negyes-HatosButton">  — Négyes-Hatos</li></a>
-                          <a href="#NaMostAkkor"><li class="navItem navDown header2" id="NaMostAkkorButton">  — Na most akkor</li></a>
+                          <a href="#Negyes-Hatos"><li class="navItem navCenter header2" id="Negyes-HatosButton">  • Négyes-Hatos</li></a>
+                          <a href="#NaMostAkkor"><li class="navItem navDown header2" id="NaMostAkkorButton">  • Na most akkor</li></a>
                         </ul>
                       </td>
                     </tr>
