--- a/public/karafiath.html
+++ b/public/karafiath.html
@@ -28,9 +28,9 @@
                     <a href="index.html"><li class="navItem navUp header1" id="KezdolapButton">Kezdőlap</li></a>
                     <a href="#Eletrajz"><li class="navItem navCenter header1" id="EletrajzButton">Életrajz</li></a>
                     <a href="#Versek"><li class="navItem navCenter header1" id="VersekButton">Versek</li></a>
-                    <a href="#Lidercfeny"><li class="navItem navCenter header2" id="LidercfenyButton">  — Lidércfény</li></a>
-                    <a href="#Tango"><li class="navItem navCenter header2" id="TangoButton">  — Tango</li></a>
-                    <a href="#Pokok"><li class="navItem navDown header2" id="PokokButton">  — Pókok</li></a>
+                    <a href="#Lidercfeny"><li class="navItem navCenter header2" id="LidercfenyButton">  • Lidércfény</li></a>
+                    <a href="#Tango"><li class="navItem navCenter header2" id="TangoButton">  • Tango</li></a>
+                    <a href="#Pokok"><li class="navItem navDown header2" id="PokokButton">  • Pókok</li></a>
                   </ul>
                 </td>
               </tr>
