CSS rearranged and menu.css added

--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Magyar kortárs versek</title>
   <link rel="stylesheet" href="main.css">
-  <link rel="stylesheet" href="page.css">
-  <link rel="stylesheet" href="nav.css">
+  <link rel="stylesheet" href="menu.css">
 </head>
 <body>
-<table id="MainMenuTitleOuter">
+<table id="MenuTitleOuter">
   <tbody>
     <tr>
       <td>
-        <table id="MainMenuTitleInner">
+        <table id="MenuTitleInner">
           <tbody>
             <tr>
               <td>Magyar kortárs versek</td>
@@ -24,7 +23,7 @@
     </tr>
   </tbody>
 </table>
-<table id="MainMenu">
+<table id="Menu">
   <tbody>
     <tr>
       <td class="mainMenuOdd mainMenuItem">Erdős Virág<br><br>
