Go to top button added and HTMLs refactored (except index.html)

--- a/public/kemeny_zsofi.html
+++ b/public/kemeny_zsofi.html
@@ -28,11 +28,12 @@
                     <a href="index.html"><li class="navItem navUp header1" id="KezdolapButton">Kezdőlap</li></a>
                     <a href="#Eletrajz"><li class="navItem navCenter header1" id="EletrajzButton">Életrajz</li></a>
                     <a href="#Versek"><li class="navItem navCenter header1" id="VersekButton">Versek</li></a>
-                    <a href="#Rontas"><li class="navItem navCenter header2" id="RontasButton">  • Rontás</li></a>
-                    <a href="#SzivEsErv"><li class="navItem navCenter header2" id="SzivEsErvButton">  • Szív és érv</li></a>
-                    <a href="#NyiltLangHasznalata"><li class="navItem navCenter header2" id="NyiltLangHasznalataButton">  • Nyílt láng használata</li></a>
-                    <a href="#MindennekATetejen"><li class="navItem navCenter header2" id="MindennekATetejenButton">  • Mindennek a tetején</li></a>
-                    <a href="#MindenValami"><li class="navItem navCenter header2" id="MindenValamiButton">  • Minden valami</li></a>
+                    <a href="#Rontas"><li class="navItem navCenter header2" id="RontasButton">• Rontás</li></a>
+                    <a href="#SzivEsErv"><li class="navItem navCenter header2" id="SzivEsErvButton">• Szív és érv</li></a>
+                    <a href="#NyiltLangHasznalata"><li class="navItem navCenter header2" id="NyiltLangHasznalataButton">• Nyílt láng használata</li></a>
+                    <a href="#MindennekATetejen"><li class="navItem navCenter header2" id="MindennekATetejenButton">• Mindennek a tetején</li></a>
+                    <a href="#MindenValami"><li class="navItem navCenter header2" id="MindenValamiButton">• Minden valami</li></a>
+                    <a href="#Forrasok"><li class="navItem navDown header1" id="ForrasokButton">Források</li></a>
                   </ul>
                 </td>
               </tr>
@@ -227,6 +228,7 @@
         Csak a csoda szer, mert a halál fasza, de a halál komoly.<br>
         Az élet képtelenség, a vég cél, de a lét minimum és abszolút érték.<br><br><br><br><br>
 
+        <a name="Forrasok"><h2>Források</h2></a>
         <div class="link"><br><a target="_blank" href="https://www.teol.hu/sztarvilag/hazai-sztarvilag/iro-kolto-slammer-rapper-es-no-1257256/"><weblink>https://www.teol.hu/sztarvilag/hazai-sztarvilag/iro-kolto-slammer-rapper-es-no-1257256/</weblink></a><br></div>
         <div class="link"><br><a target="_blank" href="https://litera.hu/irodalom/konyvajanlo/kemeny-zsofi-nyilt-lang-hasznalata.html"><weblink>https://litera.hu/irodalom/konyvajanlo/kemeny-zsofi-nyilt-lang-hasznalata.html</weblink></a><br></div>
         <div class="link"><br><a target="_blank" href="https://afuzet.hu/kemeny-zsofi-minden-valami/"><weblink>https://afuzet.hu/kemeny-zsofi-minden-valami/</weblink></a><br></div>
@@ -235,8 +237,13 @@
   </tr>
   </tbody>
 </table>
-
-<script src="functions.js"></script>
-<script src="main.js"></script>
+<table id="TopButtonTable">
+  <tbody>
+  <tr>
+    <td id="TopButton">Top</td>
+  </tr>
+  </tbody>
+</table>
+<script src="button.js"></script>
 </body>
 </html>
