--- a/public/szaloczi_daniel.html
+++ b/public/szaloczi_daniel.html
@@ -28,9 +28,9 @@
                     <a href="index.html"><li class="navItem navUp header1" id="KezdolapButton">Kezdőlap</li></a>
                     <a href="#Eletrajz"><li class="navItem navCenter header1" id="EletrajzButton">Életrajz</li></a>
                     <a href="#Versek"><li class="navItem navCenter header1" id="VersekButton">Versek</li></a>
-                    <a href="#Csakugypuszi"><li class="navItem navCenter header2" id="CsakugypusziButton">  • Csakúgypuszi</li></a>
-                    <a href="#Csakradfigyelos"><li class="navItem navCenter header2" id="CsakradfigyelosButton">  • Csakrádfigyelõs</li></a>
-                    <a href="#Esemeses"><li class="navItem navDown header2" id="EsemesesButton">  • Esemeses</li></a>
+                    <a href="#Csakugypuszi"><li class="navItem navCenter header2" id="CsakugypusziButton">• Csakúgypuszi</li></a>
+                    <a href="#Csakradfigyelos"><li class="navItem navCenter header2" id="CsakradfigyelosButton">• Csakrádfigyelõs</li></a>
+                    <a href="#Esemeses"><li class="navItem navDown header2" id="EsemesesButton">• Esemeses</li></a>
                   </ul>
                 </td>
               </tr>
@@ -100,8 +100,13 @@
   </tr>
   </tbody>
 </table>
-
-<script src="functions.js"></script>
-<script src="main.js"></script>
+<table id="TopButtonTable">
+  <tbody>
+  <tr>
+    <td id="TopButton">Top</td>
+  </tr>
+  </tbody>
+</table>
+<script src="button.js"></script>
 </body>
 </html>
