--- a/public/zavada_peter.html
+++ b/public/zavada_peter.html
@@ -28,12 +28,12 @@
                     <a href="index.html"><li class="navItem navUp header1" id="KezdolapButton">Kezdőlap</li></a>
                     <a href="#Eletrajz"><li class="navItem navCenter header1" id="EletrajzButton">Életrajz</li></a>
                     <a href="#Versek"><li class="navItem navCenter header1" id="VersekButton">Versek</li></a>
-                    <a href="#VersASzerelemrolEsAMatematikarol"><li class="navItem navCenter header2" id="VersASzerelemrolEsAMatematikarolButton">  • Vers a szerelemrõl és a matematikáról</li></a>
-                    <a href="#AmigAlszom"><li class="navItem navCenter header2" id="AmigAlszomButton">  • Amíg alszom</li></a>
-                    <a href="#Indiannyar"><li class="navItem navCenter header2" id="IndiannyarButton">  • Indiánnyár</li></a>
-                    <a href="#AjánloVizhez"><li class="navItem navCenter header2" id="AjánloVizhezrButton">  • Ajánló vízhez</li></a>
-                    <a href="#UszadekKoMindPeldanelkuli"><li class="navItem navCenter header2" id="UszadekKoMindPeldanelkuliButton">  • Uszadék, kõ: mind példanélküli</li></a>
-                    <a href="#PestiSamponReklam"><li class="navItem navDown header2" id="PestiSamponReklamButton">  • Pesti sampon (Reklám)</li></a>
+                    <a href="#VersASzerelemrolEsAMatematikarol"><li class="navItem navCenter header2" id="VersASzerelemrolEsAMatematikarolButton">• Vers a szerelemrõl és a matematikáról</li></a>
+                    <a href="#AmigAlszom"><li class="navItem navCenter header2" id="AmigAlszomButton">• Amíg alszom</li></a>
+                    <a href="#Indiannyar"><li class="navItem navCenter header2" id="IndiannyarButton">• Indiánnyár</li></a>
+                    <a href="#AjánloVizhez"><li class="navItem navCenter header2" id="AjánloVizhezrButton">• Ajánló vízhez</li></a>
+                    <a href="#UszadekKoMindPeldanelkuli"><li class="navItem navCenter header2" id="UszadekKoMindPeldanelkuliButton">• Uszadék, kõ: mind példanélküli</li></a>
+                    <a href="#PestiSamponReklam"><li class="navItem navDown header2" id="PestiSamponReklamButton">• Pesti sampon (Reklám)</li></a>
                   </ul>
                 </td>
               </tr>
@@ -177,8 +177,13 @@
   </tr>
   </tbody>
 </table>
-
-<script src="functions.js"></script>
-<script src="main.js"></script>
+<table id="TopButtonTable">
+  <tbody>
+  <tr>
+    <td id="TopButton">Top</td>
+  </tr>
+  </tbody>
+</table>
+<script src="button.js"></script>
 </body>
 </html>
