Commit for the renamed and unexpectedly uncommitted files

--- a/public/index.html
+++ b/public/index.html
@@ -27,24 +27,24 @@
   <tbody>
     <tr>
       <td class="mainMenuOdd mainMenuItem">Erdős Virág<br><br>
-        <div class="overflow"><a href="erdos.html"><img src="img/erdos-virag.jpg"></a></div>
+        <div class="overflow"><a href="erdos_virag.html"><img src="img/erdos-virag.jpg"></a></div>
       </td>
       <td class="mainMenuEven mainMenuItem">
-        <div class="overflow"><a href="karafiath.html"><img src="img/karafiath_orsolya.jpg"></a></div>
+        <div class="overflow"><a href="karafiath_orsolya.html"><img src="img/karafiath_orsolya.jpg"></a></div>
         <br>Karafiáth Orsolya
       </td>
       <td class="mainMenuOdd mainMenuItem">Kemény Lili<br><br>
-        <div class="overflow"><a href="kemeny_l.html"><img src="img/kemeny_lili.jpg"></a></div>
+        <div class="overflow"><a href="kemeny_lili.html"><img src="img/kemeny_lili.jpg"></a></div>
       </td>
       <td class="mainMenuEven mainMenuItem">
-        <div class="overflow"><a href="szaloczi.html"><img src="img/szaloczi_daniel.jpg"></a></div>
+        <div class="overflow"><a href="szaloczi_daniel.html"><img src="img/szaloczi_daniel.jpg"></a></div>
         <br>Szalóczi Dániel
       </td>
       <td class="mainMenuOdd mainMenuItem">Zavada Péter<br><br>
-        <div class="overflow"><a href="zavada.html"><img src="img/zavada_peter_200518_01-9.jpg"></a></div>
+        <div class="overflow"><a href="zavada_peter.html"><img src="img/zavada_peter_200518_01-9.jpg"></a></div>
       </td>
       <td class="mainMenuEven mainMenuItem">
-        <div class="overflow"><a href="kemeny_zs.html"><img src="img/kemeny_zsofi.jpg"></a></div>
+        <div class="overflow"><a href="kemeny_zsofi.html"><img src="img/kemeny_zsofi.jpg"></a></div>
         <br>Kemény Zsófi
       </td>
     </tr>
