--- a/public/kemeny_lili.html
+++ b/public/kemeny_lili.html
@@ -28,8 +28,8 @@
                     <a href="index.html"><li class="navItem navUp header1" id="KezdolapButton">Kezdőlap</li></a>
                     <a href="#Eletrajz"><li class="navItem navCenter header1" id="EletrajzButton">Életrajz</li></a>
                     <a href="#Versek"><li class="navItem navCenter header1" id="VersekButton">Versek</li></a>
-                    <a href="#Magasfeszultseg"><li class="navItem navCenter header2" id="MagasfeszultsegButton">  • Magasfeszültség</li></a>
-                    <a href="#Titkosiras"><li class="navItem navDown header2" id="TitkosirasButton">  • Titkosírás</li></a>
+                    <a href="#Magasfeszultseg"><li class="navItem navCenter header2" id="MagasfeszultsegButton">• Magasfeszültség</li></a>
+                    <a href="#Titkosiras"><li class="navItem navDown header2" id="TitkosirasButton">• Titkosírás</li></a>
                   </ul>
                 </td>
               </tr>
@@ -97,8 +97,13 @@
   </tr>
   </tbody>
 </table>
-
-<script src="functions.js"></script>
-<script src="main.js"></script>
+<table id="TopButtonTable">
+  <tbody>
+  <tr>
+    <td id="TopButton">Top</td>
+  </tr>
+  </tbody>
+</table>
+<script src="button.js"></script>
 </body>
 </html>
