Name typo fixed and some values and units changed

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
         <div class="overflow"><a href="szaloczi_daniel.html"><img src="img/szaloczi_daniel.jpg"></a></div>
         <br>Szalóczi Dániel
       </td>
-      <td class="mainMenuOdd mainMenuItem">Zavada Péter<br><br>
+      <td class="mainMenuOdd mainMenuItem">Závada Péter<br><br>
         <div class="overflow"><a href="zavada_peter.html"><img src="img/zavada_peter_200518_01-9.jpg"></a></div>
       </td>
       <td class="mainMenuEven mainMenuItem">
