--- a/public/zavada_peter.html
+++ b/public/zavada_peter.html
@@ -4,7 +4,7 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Zavada Péter</title>
+  <title>Závada Péter</title>
 
   <link rel="stylesheet" href="main.css">
   <link rel="stylesheet" href="page.css">
@@ -23,7 +23,7 @@
               <tbody>
               <tr>
                 <td class="navMenu">
-                  <img src="img/zavada_peter_200518_01-9.jpg"><br><h1>Zavada Péter</h1>
+                  <img src="img/zavada_peter_200518_01-9.jpg"><br><h1>Závada Péter</h1>
                   <ul class="navBar">
                     <a href="index.html"><li class="navItem navUp header1" id="KezdolapButton">Kezdőlap</li></a>
                     <a href="#Eletrajz"><li class="navItem navCenter header1" id="EletrajzButton">Életrajz</li></a>
