"Beauty" update <br>s removed and nav item height decreased

--- a/public/erdos_virag.html
+++ b/public/erdos_virag.html
@@ -44,7 +44,7 @@
         <div class="mainHeader"><a name="Eletrajz"><h1>Életrajz</h1></a></div>
         <div class="bio">1968-ban született. Az ELTE Bölcsészettudományi Karának magyar szakán szerzett
         diplomát. Írói pályája Lengyel Péter „Írói műhely” című legendás egyetemi szemináriumán
-        indult.<br>
+        indult.
         Első könyvében Korniss Péter fotóművész Budapest-témájú fotóihoz írt vegyes műfajú
         kísérőszövegeket (Udvarok). Ezt követően főként kispróza-kötetei jelentek meg (Belső udvar,
         Lenni jó, Másmilyen mesék, Eurüdiké), majd színpadi szövegeket írt (A merénylet, Bliblia,
@@ -52,7 +52,7 @@
         többek között a Móricz Zsigmond Színházban, a Bartók Kamaraszínházban és a Vígszínház
         Házi Színpadán mutatták be. A merénylet című drámájából és a Pimpáré és Vakvarjúcska
         című mesejátékából hangjáték készült a Magyar Rádióban. Négy drámája kötetben is
-        megjelent (A merénylet).<br>
+        megjelent (A merénylet).
         2011-ben látott napvilágot első verseskötete (A Trabantfejű Nő).
         A 2013-as ezt is el című kötete – melynek verseit általában a „közéleti költészet” tárgykörébe
         szokás sorolni – öt kiadást ért meg, benne olyan versekkel, mint a Na most akkor, a Van egy
