--- a/public/karafiath_orsolya.html
+++ b/public/karafiath_orsolya.html
@@ -43,8 +43,8 @@
     </td>
     <td class="page" id="PageSide">
       <div class="mainHeader"><a name="Eletrajz"><h1>Életrajz</h1></a></div>
-      <div class="bio">1976-ban született. Költõ, fordító, publicista, énekesnõ. Saját definícióval: kultúrdémon. Még ironikusabb, Szerb Antal-i megfogalmazásban: „a szerzõ, akit a smink és a paróka tartott össze. Ezek nélkül darabokra hullott volna.”<br>
-        Karafiáth Orsolya, a magyar irodalmi élet megismételhetetlen jelensége könyvtárosnak indult, és dolgozott is e minõségben a Ludwig Múzeumban. <br>
+      <div class="bio">1976-ban született. Költõ, fordító, publicista, énekesnõ. Saját definícióval: kultúrdémon. Még ironikusabb, Szerb Antal-i megfogalmazásban: „a szerzõ, akit a smink és a paróka tartott össze. Ezek nélkül darabokra hullott volna.”
+        Karafiáth Orsolya, a magyar irodalmi élet megismételhetetlen jelensége könyvtárosnak indult, és dolgozott is e minõségben a Ludwig Múzeumban.
         Emellett tévézett, írt és ír publicisztikát és rendszeresen vezet tárlatot is. Könyvbemutatói valódi irodalmi performanszok. De ez csak a háborgó felszín. Mindenekelõtt költõ, író, dalszövegíró, aki nyolc önálló kötettel jelentkezett eddig, és a Kicsi Lili, illetve a Szirén folytatásaként már beígérte függõség-trilógiája harmadik tételét is.
       </div><br>
       <div class="poem">
