--- a/public/kemeny_lili.html
+++ b/public/kemeny_lili.html
@@ -42,7 +42,7 @@
     </td>
     <td class="page" id="PageSide">
       <div class="mainHeader"><a name="Eletrajz"><h1>Életrajz</h1></a></div>
-      <div class="bio">Kemény Lili író, mûfordító, rendezõ, forgatókönyvíró. 1993-ban született, Budapesten. Tizenöt éves korában publikált elõször verset, majd azóta folyamatosan, többek között a Literán, valamint a Holmi, a Mûút, a Csillagszálló, az Esõ, az Irodalmi Jelen hasábjain. Nemcsak verseket ír, hanem dalokat is, a Kisszínes zenekar tagja.<br>
+      <div class="bio">Kemény Lili író, mûfordító, rendezõ, forgatókönyvíró. 1993-ban született, Budapesten. Tizenöt éves korában publikált elõször verset, majd azóta folyamatosan, többek között a Literán, valamint a Holmi, a Mûút, a Csillagszálló, az Esõ, az Irodalmi Jelen hasábjain. Nemcsak verseket ír, hanem dalokat is, a Kisszínes zenekar tagja.
         Madaram címû kötete 2011-ben jelent meg.
       </div><br>
       <div class="poem">
