--- a/public/szaloczi_daniel.html
+++ b/public/szaloczi_daniel.html
@@ -43,7 +43,7 @@
     </td>
     <td class="page" id="PageSide">
       <div class="mainHeader"><a name="Eletrajz"><h1>Életrajz</h1></a></div>
-      <div class="bio">Szalóczi Dániel 1984-ben született Egerben. Ott is érettségizett, majd 2003-ban az ELTE filozófia szakán folytatta tanulmányait. Ezt követõen a Mozgássérültek Petõ András Nevelõképzõ és Nevelõintézetében tanult, 2011-ben szerzett konduktori diplomát. Jelenleg Angliában él, egy mozgássérülteket nevelõ intézetben dolgozik.<br>
+      <div class="bio">Szalóczi Dániel 1984-ben született Egerben. Ott is érettségizett, majd 2003-ban az ELTE filozófia szakán folytatta tanulmányait. Ezt követõen a Mozgássérültek Petõ András Nevelõképzõ és Nevelõintézetében tanult, 2011-ben szerzett konduktori diplomát. Jelenleg Angliában él, egy mozgássérülteket nevelõ intézetben dolgozik.
         Elsõ kötete, a Csakrádfigyelõs címû verseskötet. Ezt követte a Mosakodj, Petike, addig nem nézlek indiánnak címû regénye, mely valódi társadalomkritika – egy konduktor szemével. Majd a Padtárskeresõ c. újabb "versikekötete".
       </div><br>
       <div class="poem">
