--- a/public/zavada_peter.html
+++ b/public/zavada_peter.html
@@ -46,10 +46,10 @@
     </td>
     <td class="page" id="PageSide">
       <div class="mainHeader"><a name="Eletrajz"><h1>Életrajz</h1></a></div>
-      <div class="bio">Závada Péter 1982-ben született Budapesten. Az ELTE angol-olasz szakán diplomázott.<br>
-        Hónapokig élt Kaliforniában, Rómában majd Párizsban. Dolgozott nyelvtanárként és reklámszövegíróként.<br>
-        Kamaszkorától fogva az Akkezdet Phiai rap és slam poetry csapat tagja.<br>
-        2009 óta publikál verseket többek között az Élet és Irodalom, a Holmi, a Jelenkor, az Alföld, a Hévíz, a Mûút, az Ex Symposion lapjain. A József Attila Kör tagja, a Negyed címû lap szerkesztõje.<br>
+      <div class="bio">Závada Péter 1982-ben született Budapesten. Az ELTE angol-olasz szakán diplomázott.
+        Hónapokig élt Kaliforniában, Rómában majd Párizsban. Dolgozott nyelvtanárként és reklámszövegíróként.
+        Kamaszkorától fogva az Akkezdet Phiai rap és slam poetry csapat tagja.
+        2009 óta publikál verseket többek között az Élet és Irodalom, a Holmi, a Jelenkor, az Alföld, a Hévíz, a Mûút, az Ex Symposion lapjain. A József Attila Kör tagja, a Negyed címû lap szerkesztõje.
         Elsõ kötete Ahol megszakad címmel jelent meg. Ezt követték a Mész és a Roncs szélárnyékban verseskötetek, majd a Je suis Amphitryon, drámakötet
       </div><br>
       <div class="poem">
